--- a/Lessons/Lesson-3-Working-With-The-Server/page1.html
+++ b/Lessons/Lesson-3-Working-With-The-Server/page1.html
@@ -5,6 +5,10 @@
     <a href="page1.html">Page 1</a>
     <a href="page2.html">Page 2</a>
     <a href="page3.html">Page 3</a>
-    <p>This is page 1!</p>
+    <p>This is page 1! The first page!</p>
+
+    <a href="page2.html">Relative Link to Page 2</a>
+    <br>
+    <a href="/Lessons/Lesson-3-Working-With-The-Server/page3.html">Absolute Link to Page 3</a>
 </body>
 </html>
