--- a/Lessons/Lesson-3-Working-With-The-Server/page2.html
+++ b/Lessons/Lesson-3-Working-With-The-Server/page2.html
@@ -5,6 +5,6 @@
     <a href="page1.html">Page 1</a>
     <a href="page2.html">Page 2</a>
     <a href="page3.html">Page 3</a>
-    <p>This is page 2!</p>      
+    <p>This is page 2! I have linked 2 pages now!</p>      
 </body>
 </html>
