--- a/Lessons/Lesson-3-Working-With-The-Server/page3.html
+++ b/Lessons/Lesson-3-Working-With-The-Server/page3.html
@@ -5,6 +5,6 @@
     <a href="page1.html">Page 1</a>
     <a href="page2.html">Page 2</a>
     <a href="page3.html">Page 3</a>
-    <p>This is page 3!</p>     
+    <p>This is page 3! The third and last page to be linked!</p>     
 </body>
 </html>
