modified file path links

--- a/Lessons/Lesson-3-Working-With-The-Server/page2.html
+++ b/Lessons/Lesson-3-Working-With-The-Server/page2.html
@@ -2,6 +2,7 @@
 <head>
 </head>
 <body>
+    <a href="../../index.html">Page 1</a>
     <a href="page2.html">Page 2</a>
     <a href="page3.html">Page 3</a>
     <p>This is page 2! I have linked 2 pages now!</p>      
