transferred index.html content to page1.html and made index.html to design styles hw

--- a/Lessons/Lesson-3-Working-With-The-Server/page3.html
+++ b/Lessons/Lesson-3-Working-With-The-Server/page3.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-    <a href="../../index.html">Page 1</a>
+    <a href="page1.html">Page 1</a>
     <a href="page2.html">Page 2</a>
     <a href="page3.html">Page 3</a>
     <p>This is page 3! The third and last page to be linked!</p>     
