updated files to lecture 5 intro to css hw

--- a/index.html
+++ b/index.html
@@ -1,69 +1,14 @@
 <html>
 <head>
+    <link rel= "stylesheet" type="text/css" href="Lessons/Lesson-5-Intro-To-CSS/style.css">
+    <link rel= "stylesheet" type="text/css" href="Lessons/Lesson-5-Intro-To-CSS/style-2.css">
 </head>
-<body bgcolor="778e71">
-    <h1 align="center">Design Styles Homework</h1>
-    <br>
-    <a href="https://www.wikihow.com/Main-Page#">
-        <h2 align="center">WikiHow - Contrast</h2>
-    </a>
-    <center>
-        <img src="https://i.imgur.com/1hpMo2G.png" alt="WikiHow Main Page" width="1000" height="600" >
-    </center>
-    <ul>
-        <li>Very nice use of a light-green color palette that makes great contrast with black-bold text and the white-background below.</li>
-        <li>The 'wikiHow' logo at the top has a nice font with a black and white contrast for clear visibility.</li>
-        <li>The black logos + text at the top-right of the navbar contrasts well with the darker green background. In addition, next to it there's a clickable menu 
-            with its own white background that doesn't overlap awkwardly with the darker green.
-        </li>
-    </ul>
-    
-    <a href="https://www.udemy.com/">
-        <h2 align="center">Udemy - Repetition</h2>
-    </a>
-    <center>
-        <img src="https://i.imgur.com/GHfUCPj.png" alt="Udemy Card Layout-1" width="800" height="600">
-        <img src="https://i.imgur.com/eLhIBJa.png" alt="Udemy Card Layout-2" width="800" height="600">
-    </center>
-    <ol>
-        <li>From the left image, there is clear repetition of the various courses in an organized card layout that makes it nice to look at and overall easy to navigate with.</li>
-        <li>From the right image top section, another repetition of an organized card layout, but this time it's just logos and text that makes it clear they're hoverable as clickable links for easy accessibility.</li>
-        <li>From the right image bottom section, it is repetition in a column layout, and it contains links to various categories that leads to their own courses. 
-            In addition, repetition on the info on total number of 'subscribed' students to clearly indicate how popular a category is.
-        </li>
-    </ol>
-
-    <a href="https://opencritic.com/">
-        <h2 align="center">OpenCritic - Alignment</h2>
-    </a>
-    <center>
-        <img src="https://i.imgur.com/csa8OEK.png" alt="OpenCritic Main Page-1" width="600" height="400">
-        <img src="https://i.imgur.com/VnoUW9T.png" alt="OpenCritic Main Page-2" width="600" height="400">
-        <img src="https://i.imgur.com/Byi1n5n.png" alt="OpenCritic Main Page-3" width="600" height="400">
-    </center>
-    <dl>
-        <dt>Top Navbar</dt>
-        <dd>- Easily visible navbar at the top that has clear well-aligned elements such as menu categories, search bar, clickable social media logos, and login/signup buttons.</dd>
-        <dt>Dedicated Sections<dt>
-        <dd>- Each image indicate a section with its own aligned layouts for clear and easy navigation. Overall, consistent alignment between each game or news article that makes it all visually appealing to look at.</dd>
-        <dt>Scroll Top-to-Bottom View<dt>
-        <dd>- Rather than sections on the side, the intended design is for the user to scroll through the content from top to bottom so the visuals are not overwhelming. It is well-thought out and nicely aligned, which makes it very effective.</dd>
-      </dl>
-
-    <a href="https://www.rottentomatoes.com/">
-        <h2 align="center">Rotten Tomatoes - Proximity</h2>
-    </a>
-    <center>
-        <img src="https://i.imgur.com/mrqGMPi.png" alt="Rotten Tomatoes Main Page-1" width="600" height="400">
-        <img src="https://i.imgur.com/vZ1aXBz.png" alt="Rotten Tomatoes Main Page-2" width="600" height="400">
-        <img src="https://i.imgur.com/OkGmnZU.png" alt="Rotten Tomatoes Main Page-3" width="600" height="400">
-    </center>
-    <ul>
-        <li>From the first image, on the navbar, there is a clear relation of the categories due to close proximity, such as the movies and tv shows category, which are the main points of interest of this website.</li>
-        <li>From the second image, popular streaming movies and tv shows are in close proximity due to relation of being popular, but they have their own dedicated column to indicate the difference.
-            In addition there will generally be a 'tomatometer' that's next to a movie/tv title to indicate their critic score.
-        </li>
-        <li>From the third image, these are located at the bottom of the page, which indicate far proximity because generally the first thing people want to see going into this website (first image), are the current headlines regarding movies/actors and the popular movies/shows. </li>
-    </ul>
+<body>
+    <a href="index.html">Page 1</a>
+    <a href="Lessons/Lesson-5-Intro-To-CSS/page2-css.html">Page 2</a>
+    <a href="Lessons/Lesson-5-Intro-To-CSS/page3-css.html">Page 3</a>
+    <h1>This is page 1! It has a web safe image (using JPEG Optimizer) and a different font color!</h1>
+    <h2>Example text for style-2.css page with different font color!</h2>
+    <img src="https://i.imgur.com/Kq4meh9.jpg" alt="Web Safe Elden Ring Background Image">
 </body>
 </html>
