moved previous index.html content to lesson 5 folder, and then started worst website hw

--- a/Lessons/Lesson-5-Intro-To-CSS/page2-css.html
+++ b/Lessons/Lesson-5-Intro-To-CSS/page2-css.html
@@ -4,7 +4,7 @@
     <link rel= "stylesheet" type="text/css" href="style-2.css">
 </head>
 <body>
-    <a href="../../index.html">Page 1</a>
+    <a href="page1-css.html">Page 1</a>
     <a href="page2-css.html">Page 2</a>
     <a href="page3-css.html">Page 3</a>
     <p>Lorem ipsum dolor sit amet, has habeo mazim integre an, ea meis definitiones nec, at everti quaestio pro. 
