--- a/Lessons/Lesson-6-7-Worst-Website/worst-website-1.html
+++ b/Lessons/Lesson-6-7-Worst-Website/worst-website-1.html
@@ -4,8 +4,8 @@
     <link rel= "stylesheet" type="text/css" href="Lessons/Lesson-5-Intro-To-CSS/style-2.css"> -->
 </head>
 <body>
-    <a href="index.html">Home</a>
-    <a href="Lessons/Lesson-6-7-Worst-Website/worst-website-1.html">Page 1</a>
-    <a href="Lessons/Lesson-6-7-Worst-Website/worst-website-2.html">Page 2</a>
+    <a href="../../index.html">Home</a>
+    <a href="worst-website-1.html">Page 1</a>
+    <a href="worst-website-2.html">Page 2</a>
 </body>
 </html>
