--- a/Lessons/Lesson-5-Intro-To-CSS/page1-css.html
+++ b/Lessons/Lesson-5-Intro-To-CSS/page1-css.html
@@ -2,13 +2,13 @@
 <head>
     <link rel= "stylesheet" type="text/css" href="style.css">
     <link rel= "stylesheet" type="text/css" href="style-2.css">
-
 </head>
 <body>
     <a href="page1-css.html">Page 1</a>
     <a href="page2-css.html">Page 2</a>
     <a href="page3-css.html">Page 3</a>
-    <h4>This is page 3! This has an h4 tag that has a different font type!</h4>     
-    <h5>Example text for style-2.css with different font type! </h5>
+    <h1>This is page 1! It has a web safe image (using JPEG Optimizer) and a different font color!</h1>
+    <h2>Example text for style-2.css page with different font color!</h2>
+    <img src="https://i.imgur.com/Kq4meh9.jpg" alt="Web Safe Elden Ring Background Image">
 </body>
 </html>
