--- a/Lessons/Lesson-6-7-Worst-Website/worst-website-2.html
+++ b/Lessons/Lesson-6-7-Worst-Website/worst-website-2.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <div style="text-align: center;">
-        <a href="../../index.html">Home</a>
+        <a href="worst-website.html">Home</a>
         <a href="worst-website-1.html">Page 1</a>
         <a href="worst-website-2.html">Page 2</a>
     </div>
