--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <div class="grid_4">
         <a href="https://en.wikipedia.org/wiki/Bloodborne" target="_blank">
-            <img src="https://s2.best-wallpaper.net/wallpaper/1920x1080/1711/Bloodborne-PS4-games_1920x1080.jpg" alt="Bloodborne" width="310" height="155">
+            <img src="https://i.imgur.com/2U1jJX4.jpeg" alt="Bloodborne" width="310" height="155">
         </a>
     </div>
 
