completed 960 grid and css3 hw

--- a/index.html
+++ b/index.html
@@ -6,16 +6,22 @@
 
 <title> Lesson 9 - 960 Grid HW </title>
 
-<link href="Lessons/Lesson-9-CSS3-960-Grid/css/960.css" rel="stylesheet" />
-<link href="Lessons/Lesson-9-CSS3-960-Grid/css/reset.css" rel="stylesheet" />
-<link href="Lessons/Lesson-9-CSS3-960-Grid/css/text.css" rel="stylesheet" />
-<link href="Lessons/Lesson-9-CSS3-960-Grid/css/style.css" rel="stylesheet" />
+<link href="Lessons/Lesson-9-CSS3-960-Grid/css/960.css" rel="stylesheet"/>
+<link href="Lessons/Lesson-9-CSS3-960-Grid/css/reset.css" rel="stylesheet"/>
+<link href="Lessons/Lesson-9-CSS3-960-Grid/css/text.css" rel="stylesheet"/>
+<link href="Lessons/Lesson-9-CSS3-960-Grid/css/style.css" rel="stylesheet"/>
 
 </head>
 
 <body>
 
 <div class= "container_12">
+    <nav>
+        <div class="grid_12" style="text-align: center;">
+            <a href="index.html">960 Grid Page</a>
+            <a href="Lessons/Lesson-9-CSS3-960-Grid/css3-page.html">CSS3 Page</a>
+        </div>
+    </nav>
 
     <header>
         <div class="grid_12 header">
