--- a/Lessons/Lesson-12-Bootstrap/about-me.html
+++ b/Lessons/Lesson-12-Bootstrap/about-me.html
@@ -27,7 +27,44 @@
                 </div>
             </div>
         </nav>
+
+        <div class="jumbotron jumbotron-fluid text-center" id="header-jumbotron">
+            <div class="container-fluid">
+                <h1 class="display-1" id="jumbotron-1-text">About Me</h1>
+            </div>
+        </div>
     </header>
+
+    <main>
+        <div class="container-fluid mt-3" id="about-me-container">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 p-3">
+                    <img src="assets/image-of-me.jpg" alt="Image of Me" class="img-fluid rounded-5">
+                </div>
+
+                <div class="col-lg-6 col-md-12 p-3">
+                    <p>Hello, World</p>
+                </div>
+
+                <div class="col-12 mt-2 px-3">
+                    <h3>Contact Info</h3>
+                    <ul>
+                        <li><strong>Email:</strong> nmantohac82098@gmail.com</li>
+                        <li><strong>Facebook:</strong><a href="https://www.facebook.com/profile.php?id=100007694470572" target="_blank"> Norberto Mantohac Jr</a></li>
+                        <li><strong>GitHub:</strong><a href="https://github.com/NMantohac" target="_blank"> NMantohac</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <div class="jumbotron jumbotron-fluid text-center mt-5" id="footer-jumbotron">
+            <div class="container-fluid">
+                <h6 id="jumbotron-2-text">@Copyright 2022. All Rights Reserved.</h6>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
