--- a/Lessons/Lesson-12-Bootstrap/about-me.html
+++ b/Lessons/Lesson-12-Bootstrap/about-me.html
@@ -19,7 +19,7 @@
                 </button>
  
                 <div class="collapse navbar-collapse justify-content-end p-3" id="navbarNavAltMarkup">                    
-                    <div class="navbar-nav">
+                    <div class="navbar-nav fs-5">
                         <a class="nav-item nav-link active px-3" aria-current="page" href="about-me.html">About</a>
                         <a class="nav-item nav-link px-3" href="favorite-games.html">Games</a>
                         <a class="nav-item nav-link px-3" href="contact.html">Contact</a>
@@ -30,13 +30,13 @@
 
         <div class="jumbotron jumbotron-fluid text-center" id="header-jumbotron">
             <div class="container-fluid">
-                <h1 class="display-1" id="jumbotron-1-text">About Me</h1>
+                <h1 class="display-1 fw-bold" id="header-jumbotron-text">About Me</h1>
             </div>
         </div>
     </header>
 
     <main>
-        <div class="container-fluid mt-3" id="about-me-container">
+        <div class="container-fluid" id="about-me-container">
             <div class="row">
                 <div class="col-lg-6 col-md-12 p-3">
                     <img src="assets/image-of-me.jpg" alt="Image of Me" class="img-fluid rounded-5">
@@ -61,7 +61,7 @@
     <footer>
         <div class="jumbotron jumbotron-fluid text-center mt-5" id="footer-jumbotron">
             <div class="container-fluid">
-                <h6 id="jumbotron-2-text">@Copyright 2022. All Rights Reserved.</h6>
+                <h6 id="footer-jumbotron-text">@Copyright 2022. All Rights Reserved.</h6>
             </div>
         </div>
     </footer>
