--- a/Lessons/Lesson-12-Bootstrap/favorite-games.html
+++ b/Lessons/Lesson-12-Bootstrap/favorite-games.html
@@ -19,7 +19,7 @@
                 </button>
  
                 <div class="collapse navbar-collapse justify-content-end p-3" id="navbarNavAltMarkup">                    
-                    <div class="navbar-nav">
+                    <div class="navbar-nav fs-5">
                         <a class="nav-item nav-link px-3" href="about-me.html">About</a>
                         <a class="nav-item nav-link active px-3" aria-current="page" href="favorite-games.html">Games</a>
                         <a class="nav-item nav-link px-3" href="contact.html">Contact</a>
@@ -27,7 +27,21 @@
                 </div>
             </div>
         </nav>
+
+        <div class="jumbotron jumbotron-fluid text-center" id="header-jumbotron">
+            <div class="container-fluid">
+                <h1 class="display-1 fw-bold" id="header-jumbotron-text">Favorite Games</h1>
+            </div>
+        </div>
     </header>
+
+    <footer>
+        <div class="jumbotron jumbotron-fluid text-center mt-5" id="footer-jumbotron">
+            <div class="container-fluid">
+                <h6 id="footer-jumbotron-text">@Copyright 2022. All Rights Reserved.</h6>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
