completed about me page

--- a/Lessons/Lesson-12-Bootstrap/about-me.html
+++ b/Lessons/Lesson-12-Bootstrap/about-me.html
@@ -42,8 +42,17 @@
                     <img src="assets/image-of-me.jpg" alt="Image of Me" class="img-fluid rounded-5">
                 </div>
 
-                <div class="col-lg-6 col-md-12 p-3">
-                    <p>Hello, World</p>
+                <div class="col-lg-6 col-md-12 p-3 fs-5">
+                    <p>I am a former UC Berkeley student that will return in Fall 2022 to pursue a B.A. degree in <strong>Computer Science</strong> in the College of Letters & Science department.</p>
+                    <p>
+                        My overall goal and career-work is <strong>Software Engineering</strong>, and <strong>Video Game Design & Development</strong> somewhere down the line, 
+                        using game engines such as <strong>Unity</strong> and/or <strong>Unreal Engine 5</strong>. I also have an interest in drawing and creating art/animation through 
+                        the graphics software, <strong>Blender</strong>.
+                    </p>
+                    <p>
+                        In addition, I wish to learn more about web development because creating websites is fun and amazing. There are many useful tools and frameworks 
+                        that I know about, but want to go more in-depth such as <strong>JavaScript, Web APIs, Node.js, Databases like SQL and MongoDB, and React/Redux</strong>.
+                    </p>
                 </div>
 
                 <div class="col-12 mt-2 px-3">
