completed bootstrap project

--- a/Lessons/Lesson-12-Bootstrap/favorite-games.html
+++ b/Lessons/Lesson-12-Bootstrap/favorite-games.html
@@ -35,6 +35,180 @@
         </div>
     </header>
 
+    <main>
+        <div class="container-fluid" id="favorite-games-container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-12 text-center mt-3">
+                    <h4>Elden Ring</h4>
+                    <img src="https://i.imgur.com/SwHM6l4.png" alt="Elden Ring BG" class="img-fluid img-thumbnail">
+                    <div class="text-center mt-3">
+                        <a href="https://en.wikipedia.org/wiki/Elden_Ring" class="btn btn-dark" role="button" target="_blank">More Info 🔗</a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-12 text-center mt-3">
+                    <h4>Dragon Quest VIII</h4>
+                    <img src="https://i.imgur.com/4vdRMhu.png" alt="Dragon Quest VIII BG" class="img-fluid img-thumbnail">
+                    <div class="text-center mt-3">
+                        <a href="https://en.wikipedia.org/wiki/Dragon_Quest_VIII" class="btn btn-dark" role="button" target="_blank">More Info 🔗</a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-12 text-center mt-3">
+                    <h4>Shadow of the Colossus</h4>
+                    <img src="https://i.imgur.com/GSbjT4R.png" alt="Shadow of the Colossus BG" class="img-fluid img-thumbnail">
+                    <div class="text-center mt-3">
+                        <a href="https://en.wikipedia.org/wiki/Shadow_of_the_Colossus" class="btn btn-dark" role="button" target="_blank">More Info 🔗</a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-12 text-center mt-3">
+                    <h4>Bloodborne</h4>
+                    <img src="https://i.imgur.com/JkNbSgr.png" alt="Bloodborne BG" class="img-fluid img-thumbnail">
+                    <div class="text-center mt-3">
+                        <a href="https://en.wikipedia.org/wiki/Bloodborne" class="btn btn-dark" role="button" target="_blank">More Info 🔗</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mt-3">
+                <div class="col-lg-3 col-md-6 col-sm-12 text-center mt-3">
+                    <h4>Zelda: BOTW</h4>
+                    <img src="https://i.imgur.com/nGo1Uv0.png" alt="Zelda: BOTW BG" class="img-fluid img-thumbnail">
+                    <div class="text-center mt-3">
+                        <a href="https://en.wikipedia.org/wiki/The_Legend_of_Zelda:_Breath_of_the_Wild" class="btn btn-dark" role="button" target="_blank">More Info 🔗</a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-12 text-center mt-3">
+                    <h4>Halo 3</h4>
+                    <img src="https://i.imgur.com/ZK8ltQu.png" alt="Halo 3 BG" class="img-fluid img-thumbnail">
+                    <div class="text-center mt-3">
+                        <a href="https://en.wikipedia.org/wiki/Halo_3" class="btn btn-dark" role="button" target="_blank">More Info 🔗</a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-12 text-center mt-3">
+                    <h4>COD: MW2</h4>
+                    <img src="https://i.imgur.com/eps8eWs.png" alt="COD: MW2 BG" class="img-fluid img-thumbnail">
+                    <div class="text-center mt-3">
+                        <a href="https://en.wikipedia.org/wiki/Call_of_Duty:_Modern_Warfare_2" class="btn btn-dark" role="button" target="_blank">More Info 🔗</a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-12 text-center mt-3">
+                    <h4>GTA IV</h4>
+                    <img src="https://i.imgur.com/IvbfjWW.png" alt="GTA IV BG" class="img-fluid img-thumbnail">
+                    <div class="text-center mt-3">
+                        <a href="https://en.wikipedia.org/wiki/Grand_Theft_Auto_IV" class="btn btn-dark" role="button" target="_blank">More Info 🔗</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mt-3">
+                <div class="col-lg-3 col-md-6 col-sm-12 text-center mt-3">
+                    <h4>Smash Bros. Ultimate</h4>
+                    <img src="https://i.imgur.com/HOl1pxK.png" alt="Smash Bros. Ultimate BG" class="img-fluid img-thumbnail">
+                    <div class="text-center mt-3">
+                        <a href="https://en.wikipedia.org/wiki/Super_Smash_Bros._Ultimate" class="btn btn-dark" role="button" target="_blank">More Info 🔗</a>
+                    </div>
+                </div>
+ 
+                <div class="col-lg-3 col-md-6 col-sm-12 text-center mt-3">
+                    <h4>Arknights</h4>
+                    <img src="https://i.imgur.com/Zawb6ew.png" alt="Arknights BG" class="img-fluid img-thumbnail">
+                    <div class="text-center mt-3">
+                        <a href="https://en.wikipedia.org/wiki/Arknights" class="btn btn-dark" role="button" target="_blank">More Info 🔗</a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-12 text-center mt-3">
+                    <h4>Bioshock Infinite</h4>
+                    <img src="https://i.imgur.com/3c1dC6y.png" alt="Bioshock Infinite BG" class="img-fluid img-thumbnail">
+                    <div class="text-center mt-3">
+                        <a href="https://en.wikipedia.org/wiki/BioShock_Infinite" class="btn btn-dark" role="button" target="_blank">More Info 🔗</a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-12 text-center mt-3">
+                    <h4>God of War</h4>
+                    <img src="https://i.imgur.com/qycUFet.png" alt="God of War BG" class="img-fluid img-thumbnail">
+                    <div class="text-center mt-3">
+                        <a href="https://en.wikipedia.org/wiki/God_of_War_(2018_video_game)" class="btn btn-dark" role="button" target="_blank">More Info 🔗</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mt-3">
+                <div class="col-lg-3 col-md-6 col-sm-12 text-center mt-3">
+                    <h4>Left 4 Dead 2</h4>
+                    <img src="https://i.imgur.com/NzFXDIm.png" alt="Left 4 Dead 2 BG" class="img-fluid img-thumbnail">
+                    <div class="text-center mt-3">
+                        <a href="https://en.wikipedia.org/wiki/Left_4_Dead_2" class="btn btn-dark" role="button" target="_blank">More Info 🔗</a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-12 text-center mt-3">
+                    <h4>Minecraft</h4>
+                    <img src="https://i.imgur.com/3NVl9wE.png" alt="Minecraft BG" class="img-fluid img-thumbnail">
+                    <div class="text-center mt-3">
+                        <a href="https://en.wikipedia.org/wiki/Minecraft" class="btn btn-dark" role="button" target="_blank">More Info 🔗</a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-12 text-center mt-3">
+                    <h4>Super Mario Odyssey</h4>
+                    <img src="https://i.imgur.com/EGCo1cP.png" alt="Super Mario Odyssey BG" class="img-fluid img-thumbnail">
+                    <div class="text-center mt-3">
+                        <a href="https://en.wikipedia.org/wiki/Super_Mario_Odyssey" class="btn btn-dark" role="button" target="_blank">More Info 🔗</a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-12 text-center mt-3">
+                    <h4>Battlefield 1</h4>
+                    <img src="https://i.imgur.com/3qca56K.png" alt="Battlefield 1 BG" class="img-fluid img-thumbnail">
+                    <div class="text-center mt-3">
+                        <a href="https://en.wikipedia.org/wiki/Battlefield_1" class="btn btn-dark" role="button" target="_blank">More Info 🔗</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row my-3">
+                <div class="col-lg-3 col-md-6 col-sm-12 text-center my-3">
+                    <h4>Doom Eternal</h4>
+                    <img src="https://i.imgur.com/azd5yt0.png" alt="Doom Eternal BG" class="img-fluid img-thumbnail">
+                    <div class="text-center mt-3">
+                        <a href="https://en.wikipedia.org/wiki/Doom_Eternal" class="btn btn-dark" role="button" target="_blank">More Info 🔗</a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-12 text-center my-3">
+                    <h4>Fable II</h4>
+                    <img src="https://i.imgur.com/PCs1hfo.png" alt="Fable II BG" class="img-fluid img-thumbnail">
+                    <div class="text-center mt-3">
+                        <a href="https://en.wikipedia.org/wiki/Fable_II" class="btn btn-dark" role="button" target="_blank">More Info 🔗</a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-12 text-center my-3">
+                    <h4>Resident Evil 4</h4>
+                    <img src="https://i.imgur.com/7OMrmCM.png" alt="Resident Evil 4 BG" class="img-fluid img-thumbnail">
+                    <div class="text-center mt-3">
+                        <a href="https://en.wikipedia.org/wiki/Resident_Evil_4" class="btn btn-dark" role="button" target="_blank">More Info 🔗</a>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 col-sm-12 text-center my-3">
+                    <h4>Sly 3</h4>
+                    <img src="https://i.imgur.com/oVg0Wmv.png" alt="Sly 3 BG" class="img-fluid img-thumbnail">
+                    <div class="text-center mt-3">
+                        <a href="https://en.wikipedia.org/wiki/Sly_3:_Honor_Among_Thieves" class="btn btn-dark" role="button" target="_blank">More Info 🔗</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
     <footer>
         <div class="jumbotron jumbotron-fluid text-center mt-5" id="footer-jumbotron">
             <div class="container-fluid">
